--- a/backend/loans/Cargo.toml
+++ b/backend/loans/Cargo.toml
@@ -2,3 +2,10 @@
 name = "loans"
 version = "0.1.0"
 edition = "2021"
+
+[lib]
+crate-type = ["cdylib"]
+
+[dependencies]
+candid = "0.9"
+ic-cdk = "0.11"
