--- a/backend/loans/Cargo.toml
+++ b/backend/loans/Cargo.toml
@@ -7,5 +7,9 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-candid = "0.9"
-ic-cdk = "0.11"
+ic-cdk = "0.13"
+ic-cdk-macros = "0.13"
+serde = "1.0"
+
+[profile.release]
+opt-level = 3
