--- a/backend/wallet/Cargo.toml
+++ b/backend/wallet/Cargo.toml
@@ -4,8 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [lib]
-crate-type = ["cdylib"]  # Required for WebAssembly output, which ICP uses
+crate-type = ["cdylib"]
 
 [dependencies]
-candid = "0.9"  # For Candid interface serialization
-ic-cdk = "0.11"  # ICP canister development kit
+ic-cdk = "0.13"
+ic-cdk-macros = "0.13"
+serde = "1.0"
+
+[profile.release]
+opt-level = 3
